--- a/HTML/Registration/registration.html
+++ b/HTML/Registration/registration.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Registration</title>
 
     <link rel="shortcut icon" href="../CI Platform Assets/logo.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="./login.css ">
+    <link rel="stylesheet" href="../Registration/registration.css ">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css"
         integrity="sha512-wR4oNhLBHf7smjy0K4oqzdWumd+r5/+6QO/vDda76MW5iug4PT7v86FoEkySIJft3XA0Ae6axhIvHrqwm793Nw=="
@@ -86,6 +86,26 @@
                 <div class="row justify-content-center">
                     <div class="col-12 col-lg-9 col-md-9 col-sm-9 col-xs-9">
                         <form>
+
+                            <div class="mb-3 ">
+                                <label for="exampleInputEmail1" class="form-label">First Name</label>
+                                <input type="text" class="form-control" id="exampleInputFirstname"
+                                    aria-describedby="emailHelp">
+                            </div>
+
+                            <div class="mb-3 ">
+                                <label for="exampleInputEmail1" class="form-label">Last Name</label>
+                                <input type="text" class="form-control" id="exampleInputLastname"
+                                    aria-describedby="emailHelp">
+                            </div>
+
+                            <div class="mb-3 ">
+                                <label for="exampleInputEmail1" class="form-label">Phone Number</label>
+                                <input type="number" class="form-control" id="exampleInputnumber"
+                                    aria-describedby="emailHelp">
+                            </div>
+
+
                             <div class="mb-3 ">
                                 <label for="exampleInputEmail1" class="form-label">Email address</label>
                                 <input type="email" class="form-control" id="exampleInputEmail1"
@@ -94,25 +114,22 @@
                             <div class="mb-3">
                                 <label for="exampleInputPassword1" class="form-label">Password</label>
                                 <input type="password" class="form-control" id="exampleInputPassword1">
-                                <button type="submit" class="btn btn-outline-warning mt-4">Login</button>
+
+                                <label for="exampleInputPassword1" class="form-label mt-3">Confirm Password</label>
+                                <input type="password" class="form-control" id="exampleInputPassword1">
+
+                                <button type="submit" class="btn btn-outline-warning mt-4">Register</button>
                                 <div class="text-center mt-3 forgot-pswd">
-                                    <a href="../forgot-password/forgot_password.html">Lost your password?</a> 
+                                    <a href="../forgot-password/forgot_password.html">Lost your password?</a>
                                 </div>
 
                                 <div class="text-center mt-2">
                                     <div class="create-account-link-1">
-                                        <span>Don't have an account?</span>
-                                        <a class="crt-acc" href="create-account.html"> Create an account</a>
+                                        <span>Already Registered ?</span>
+                                        <a class="crt-acc" href="../login/login.html"> Login now</a>
                                     </div>
-                                    <div class="create-account-link-2">
-                                    <div class="mt-3 text-center">
-                                        <span>Don't have an account?</span>
-                                    </div>
-                                    <div class="mt-1 text-center">
-                                        <a class="crt-acc" href="create-account.html"> Create an account</a>
-                                    </div>
-        
-                                    </div>
+
+                                </div>
 
                                 <div class=" text-center mt-5">
                                     <p>Privacy Policy</p>
@@ -137,7 +154,7 @@
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
+<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
     integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
