--- a/HTML/Reset-Password/reset_password.html
+++ b/HTML/Reset-Password/reset_password.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="./login.css ">
+    <link rel="stylesheet" href="../Reset-Password/reset_password.css ">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css"
         integrity="sha512-wR4oNhLBHf7smjy0K4oqzdWumd+r5/+6QO/vDda76MW5iug4PT7v86FoEkySIJft3XA0Ae6axhIvHrqwm793Nw=="
@@ -87,32 +87,20 @@
                     <div class="col-12 col-lg-9 col-md-9 col-sm-9 col-xs-9">
                         <form>
                             <div class="mb-3 ">
-                                <label for="exampleInputEmail1" class="form-label">Email address</label>
-                                <input type="email" class="form-control" id="exampleInputEmail1"
+                                <label for="exampleInputEmail1" class="form-label">New Passsword</label>
+                                <input type="password" class="form-control" id="exampleInputPassword1"
                                     aria-describedby="emailHelp">
                             </div>
                             <div class="mb-3">
-                                <label for="exampleInputPassword1" class="form-label">Password</label>
-                                <input type="password" class="form-control" id="exampleInputPassword1">
-                                <button type="submit" class="btn btn-outline-warning mt-4">Login</button>
-                                <div class="text-center mt-3 forgot-pswd">
-                                    <a href="../forgot-password/forgot_password.html">Lost your password?</a> 
-                                </div>
+                                <label for="exampleInputPassword1" class="form-label">Confirm New Password</label>
+                                <input type="password" class="form-control" id="exampleInputPassword2">
 
-                                <div class="text-center mt-2">
-                                    <div class="create-account-link-1">
-                                        <span>Don't have an account?</span>
-                                        <a class="crt-acc" href="create-account.html"> Create an account</a>
-                                    </div>
-                                    <div class="create-account-link-2">
-                                    <div class="mt-3 text-center">
-                                        <span>Don't have an account?</span>
-                                    </div>
-                                    <div class="mt-1 text-center">
-                                        <a class="crt-acc" href="create-account.html"> Create an account</a>
-                                    </div>
+                                <button type="submit" class="btn btn-outline-warning mt-4">Change Password</button>
+                                <div class="text-center mt-3 forgot-pswd">
+                                    <a href="../login/login.html">Login</a> 
+                                </div>
         
-                                    </div>
+                            
 
                                 <div class=" text-center mt-5">
                                     <p>Privacy Policy</p>
