reset password page and registration page in mvc

--- a/HTML/Reset-Password/reset_password.html
+++ b/HTML/Reset-Password/reset_password.html
@@ -87,6 +87,10 @@
                     <div class="col-12 col-lg-9 col-md-9 col-sm-9 col-xs-9">
                         <form>
                             <div class="mb-3 ">
+                                <h4 class="text-center">New Password</h4>
+                                <p class="text-center mt-2 nclr">
+                                    Please enter a new password in the fields below.
+                                </p>
                                 <label for="exampleInputEmail1" class="form-label">New Passsword</label>
                                 <input type="password" class="form-control" id="exampleInputPassword1"
                                     aria-describedby="emailHelp">
