--- a/HTML/Registration/registration.html
+++ b/HTML/Registration/registration.html
@@ -131,7 +131,7 @@
 
                                 </div>
 
-                                <div class=" text-center mt-5">
+                                <div class=" text-center privacy">
                                     <p>Privacy Policy</p>
                                 </div>
                             </div>
